# unrealcv-ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
src/: example_client.py  example_passthrough_client.py  example_simple_client.py  passthrough_node.py  simple_node.py  unreal_coordinates.py  unrealcv_bridge.py
srv/: GetCameraImage.srv  GetCameraImageWithFilename.srv  GetCameraLocation.srv  GetCameraRotation.srv  GetImageForPose.srv  GetObjectColor.srv  GetObjectLocation.srv  GetObjectRotation.srv  GetViewmode.srv  MoveCamera.srv  SetCameraRotation.srv  SetObjectColor.srv  SetObjectLocation.srv  SetObjectRotation.srv  SetViewmode.srv
