<?xml version="1.0"?>
<package>
  <!-- Package information -->
  <name>unrealcv_ros</name>
  <version>0.1.0</version>
  <description>ROS bindings for UnrealCV</description>

  <!-- Author information -->
  <maintainer email="jskinn7@gmail.com">John Skinner</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/jskinn/unrealcv-ros</url>
  <author email="jskinn7@gmail.com">John Skinner</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
